Add image looping with jQuery

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 <body>
 <div class="wrapper">
   <div id="slider">
-    <img src="images/image1.jpg">
-    <img src="images/image2.jpg">
-    <img src="images/image3.jpg">
-    <img src="images/image4.jpg">
+    <img id="1" src="images/image1.jpg">
+    <img id="2" src="images/image2.jpg">
+    <img id="3" src="images/image3.jpg">
+    <img id="4" src="images/image4.jpg">
   </div>
   <a href="#" class="left">Previous</a>
   <a href="#" class="right">Next</a>
 </div>
+
+<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
