--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <img id="3" src="images/image3.jpg">
     <img id="4" src="images/image4.jpg">
   </div>
-  <a href="#" class="left">Previous</a>
-  <a href="#" class="right">Next</a>
+  <a href="#" class="left" onclick="prev(); return false;">Previous</a>
+  <a href="#" class="right" onclick="next(); return false;">Next</a>
 </div>
 
 <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
