--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#" class="right" onclick="next(); return false;">Next</a>
 </div>
 
-<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
